@@ -22,8 +22,11 @@ Features
 Bug Handling
 ------------
 
+* Fixed visibility of synchronous decoders in reports (#1312).
+
 0.9.2 (2015-??-??)
 ==================
+
 
 0.9.1 (2015-03-13)
 ==================
